Fix scrollbar in the Debug module when viewing PHP info output

--- a/extensions/debug/assets/main.css
+++ b/extensions/debug/assets/main.css
@@ -34,6 +34,10 @@ td, th {
 	word-break: break-all;
 }
 
+.config-php-info-table td.v {
+	word-break: break-all;
+}
+
 .detail-grid-view th {
     white-space: nowrap;
 }
